@startuml



interface nsysu.bank.account.CanWithdraw {
實作這個介面的帳戶可以執行"提款"
}

abstract class nsysu.bank.account.InterestAccount {
計算利息
}


class nsysu.util.mongodb.MongoDBUtil {
第一層，處理與MongoDB(線上資料庫)的連線
}











class nsysu.bank.account.TimeDeposit {
定存
}



abstract class nsysu.bank.account.BasicAccount {
    refresh
    內部轉帳(同個使用者的帳號轉帳，e.g.活存轉定存)
}



class nsysu.bank.account.ForeignAccount {
外幣帳戶
}

class nsysu.bank.account.CheckingAccount {
支票帳戶(無利息)
}

class nsysu.util.sqlaccess.UserData {
同左
}

class nsysu.bank.HistoryRecord {
交易歷史紀錄
}




class nsysu.bank.role.Administrator {
}
class nsysu.util.sqlaccess.AccountData {
第二層，封裝 mongodbUtil
提供更直白的API
}


abstract class nsysu.bank.role.Person {
載入使用者資料
}




interface nsysu.bank.account.CanTransferOut {
實作這個介面的帳戶可以執行:
"向其他使用者轉帳"(定存就不行)
}




class nsysu.bank.account.SavingAccount {
活存
}



nsysu.bank.account.BasicAccount <|-- nsysu.bank.account.InterestAccount

nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.TimeDeposit
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.ForeignAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.ForeignAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.CheckingAccount
nsysu.bank.account.CanTransferOut <|.. nsysu.bank.account.CheckingAccount
nsysu.bank.account.BasicAccount <|-- nsysu.bank.account.CheckingAccount
nsysu.bank.Comparable <|.. nsysu.bank.HistoryRecord
nsysu.bank.role.Person <|-- nsysu.bank.role.Administrator
nsysu.bank.role.Person <|-- nsysu.bank.role.User
nsysu.bank.account.CanTransferOut <|.. nsysu.bank.account.SavingAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.SavingAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.SavingAccount
@enduml